# polyposis

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  prestart.sh  pyproject.toml
npass/: config.py  manage.py
npass/npass/: asgi.py  settings.py  urls.py  wsgi.py
template/: blank.html  chart-chartist.html  chart-chartjs.html  chart-echarts.html  chart-flot.html  chart-morris.html  chart-peity.html  chart-rickshaw.html  chart-sparkline.html  pages.html  table-basic.html  table-datatable.html
